Add LabController for testing. Add role and permission.